--- a/AppServSalud/src/main/resources/templates/forms/editarProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarProfesional.html
@@ -52,7 +52,7 @@
                                                 alt="Avatar"
                                                 class="img-fluid rounded-circle col-sm-8 imagen-redonda d-none"
                                             >
-                                            <i class="icono-modificar">✎</i>
+                                            <i class="fa-solid fa-circle-plus fa-2xl" id="icono-modificar"></i>
                                             <input
                                                 id="fotoPerfil"
                                                 type="file"
