mas arreglos de infoTurno, delete de modals.css

--- a/AppServSalud/src/main/resources/templates/infoTurnos.html
+++ b/AppServSalud/src/main/resources/templates/infoTurnos.html
@@ -42,7 +42,7 @@
                                 <hr>
                                 <p style="text-align: center;font-size: 14pt">
                                 <strong>Optimizá tu tiempo</strong> . Al finalizar tu consulta
-                                gestióná tus turnos para prácticas médicas complementarias o nuevas
+                                gestioná tus turnos para prácticas médicas complementarias o nuevas
                                  consultas ese mismo día.
                             </p>
                             <hr>
@@ -163,13 +163,16 @@
                     <div class="card" id="infoturno">
                         <div class="card-header" id="infoturno" style="align-items: center;">
                             <h1> <span style="font-size: 20pt;color: #006cb0"><strong> Información Útil </strong></span> </h1>
+                           
                         </div>
                         <div class="card-body" id="infoturno">
                           <blockquote class="blockquote mb-0">
                             <div class="informacion-util-generica-bloque" id="infoturno">
                               <div style="font-size: 13pt" class="tamaño-texto">
-                                <p><strong style="text-decoration: underline">Ubicación: </strong>Pedro Simón Laplace 5749, esq. Blas Pascal – Villa
-                                    Belgrano- Córdoba</p>
+                                <h4><strong>Sede Central MediYa!</strong></h4>
+                                <p>&nbsp;</p>
+                                <p><strong style="text-decoration: underline">Ubicación: </strong>
+                                    Nameless 1234, Palermo, CABA.</p>
                                 <p><strong>Teléfono:&nbsp;</strong>0810-132-1234</p>
                                 <p><strong><span
                                             class=""
@@ -184,6 +187,7 @@
                                         </span> 
                                     </strong>mediya@mail.com
                                 </p>
+                                <p>&nbsp;</p>
                                 </div>
                             <footer style="background-color: white" id="infoturno">
                                 <hr>
