--- a/AppServSalud/src/main/resources/templates/fragments/footer.html
+++ b/AppServSalud/src/main/resources/templates/fragments/footer.html
@@ -17,7 +17,7 @@
             width="45px"
           >
         </a>
-        <b>Tel. +541122222222</b>
+        <b>Tel. 0810-132-12341</b>
       </p>
     </div>
     <div class="mt-3">
