corrección de consultas de historia clinica y registro de consulta

--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
@@ -239,6 +239,7 @@
         <div class="mt-2 mb-2">
           <h5>Próximos Turnos</h5>
         </div>
+        <p>Profesional ID: <span th:text="${usuario.id}"></span></p>
         <div class="">
           <div
             class="row d-grid"
@@ -412,7 +413,7 @@
             <p for="dniPaciente">DNI: <span id="dniPaciente"></span></p>
             <p for="obraSocialPaciente">Obra Social: <span id="obraSocialPaciente"></span></p>
             <input
-              type="hidden"
+              type=""
               id="idPacienteInput"
               name="idPaciente"
             />
