arreglo de bugs

--- a/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
@@ -206,7 +206,7 @@
                     <button
                         type="submit"
                         class="btn btn-primary"
-                    >Cambiar Contraseña</button>
+                    >Registrar Profesional</button>
                 </div>
             </form>
         </div>
