--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                         evaluación de su salud por parte de un médico de forma remota. Esto puede ser una excelente
                         opción si tiene síntomas leves o si no puede programar una cita con un médico en persona..</p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                    <button class="btn btn-outline">Ver mas</button>
+                    <button class="btn btn-secondary" disabled>Proximamente...</button>
                 </div>
             </div>
             
@@ -99,7 +99,7 @@
         <br>
         <br>
         <br>
-        <section id="sobrenosotros">
+        <section id="sobrenosotros" class="container">
           <h2>¿Quienes somos en Medi Ya!?</h2>
           <p>
             Somos profesionales de la salud comprometidos con la creación de nuestra plataforma. Ofrecemos servicios personalizados, permitiendo que cada profesional se una, comparta su especialidad y horario, facilitando a los pacientes agendar citas fácilmente. Imaginamos un mundo donde la atención médica sea eficiente, efectiva y centrada en el paciente. Tu salud es nuestra prioridad.</p>
